# ArmyAntLib_Old

./: .cproject  .gitignore  .project  ARMYANT.COPYRIGHT.BSD_LICENSE.MD  ArmyAnt.license  ArmyAntLib.sln  CMakeLists.txt  README.md  ReadMe.txt  make_all.sh
ArmyAntLib/: ArmyAnt.h  ArmyAntLib.vcxproj  ArmyAntLib.vcxproj.filters  CMakeLists.txt  CMakeLists.txt~  C_ArmyAnt.h  Makefile  cmake_install.cmake  make.sh  make_all.sh  make_debug_x86.sh~  vc140.idb
ArmyAntLib/ArmyAntLib.tlog/: ArmyAntLib.lastbuildstate  ArmyAntLib.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ArmyAntLib/base/: DeveloperReadme.txt  Java_AAFile.h  Java_AANeuron.h  ProgrammerRule.txt  Readme.txt  base.hpp  build_end.bat  build_end.sh  build_start.bat  build_start.sh
ArmyAntLib/include/: AAAes.h  AABinary.h  AAClassPrivateHandle.hpp  AAConfiguration.h  AADefine.h  AADigraph.hpp  AAFile.h  AAFragment.h  AAIStream.h  AAIStream_Com.h  AAIStream_File.h  AAIStream_Pipe.h  AAJNITools.h  AAJNITools.hpp  AAMessageQueue.h  AANeuron.hpp  AASocket.h  AASocket_ProtocolTypes  AAStateMachine.h  AAStateMachine.hpp  AATree.hpp  AATripleMap.hpp  AA_end.h  AA_start.h  ArmyAntLib.h  ArmyAnt_Java_AAFile.h  C_AADefine.h  C_AAFile.h  C_AANeuron.h
ArmyAntLib/languages/Java/: buildJava.bat
ArmyAntLib/languages/Java/src/: Java_AAFile.java  Java_AANeuron.java
ArmyAntLib/languages/Java/src/ArmyAnt/: FileStream.java  Java_AAFile.java  Java_AANeuron.java  NeuronAlgorithm.java
ArmyAntLib/languages/Python/: ArmyAnt.py
ArmyAntLib/lib/: ArmyAntLib.lib  ArmyAntLib_64.lib  ArmyAntLibd.lib  ArmyAntLibd_64.lib
ArmyAntLib/src/: AAAes.cpp  AABinary.cpp  AAFile.cpp  AAIStream.cpp  AAIStream_File.cpp  AAIStream_Memory.cpp  AAIStream_Private  AAJNITools.cpp  AAPythonExport.cpp  AASocket.cpp  AAStateMachine.cpp  ArmyAntLib.cpp  ArmyAnt_Java_AAFile.cpp  C_AAFile.cpp  C_AANeuron.cpp  C_AAStream.cpp  Java_AAFile.cpp  Java_AANeuron.cpp
JavaLibTest/src/: Main.java
LibOut/: ArmyAnt.h  C_ArmyAnt.h
LibOut/include/: AAAes.h  AAClassPrivateHandle.hpp  AADefine.h  AADigraph.hpp  AAFile.h  AAFragment.h  AAJNITools.h  AAJNITools.hpp  AAMessageQueue.h  AANeuron.hpp  AASocket.h  AASocket_ProtocolTypes  AAStateMachine.h  AAStateMachine.hpp  AATree.hpp  AATripleMap.hpp  AA_end.h  AA_start.h  C_AADefine.h  C_AAFile.h  C_AANeuron.h  Java_AAFile.h  Java_AANeuron.h
LibOut/lib/: ArmyAntLib.lib  ArmyAntLib_64.lib  ArmyAntLibd.lib  ArmyAntLibd_64.lib
LinuxLibTest/: CMakeLists.txt  constants.h  decode.txt  encode.txt  main.cpp  make.sh  test2.txt
Win32LibTest/: ArmyAnt.h  Win32LibTest.vcxproj  Win32LibTest.vcxproj.filters  build_start.bat  byteDecoder.txt  byteEncoder.txt  constants.h  main.cpp  main.h  test.txt  vc140.idb
Win32LibTest/Win32LibTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Win32LibTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Win32LibTest/include/: AAClassPrivateHandle.hpp  AADefine.h  AAFile.h  AAFragment.h  AAStateMachine.h  AATree.hpp  AATripleMap.hpp  C_AADefine.h  C_AAFile.h
Win32LibTest/lib/: ArmyAntLib.lib  ArmyAntLibd.lib  ArmyAntLibd_64.lib
doc/: DeveloperReadme.txt
iOSLibTest/: main.h
inc/: AAAes.h  AABinary.h  AAClassPrivateHandle.hpp  AAConfiguration.h  AADefine.h  AADigraph.hpp  AAFragment.h  AAIStream.h  AAIStream_Com.h  AAIStream_File.h  AAIStream_Memory.h  AAIStream_Pipe.h  AAJNITools.h  AAJson.h  AALog.h  AAMath.h  AAMathStructs.h  AAMessageQueue.h  AANeuron.hpp  AANeuronNetwork.hpp  AASocket.h  AASqlClient.h  AASqlStructs.h  AAStateMachine.hpp  AAString.h  AATree.hpp  AATripleMap.hpp  AA_end.h  AA_start.h  ArmyAnt.h  ArmyAntLib.h  C_AADefine.h  C_AAStream.h  C_ArmyAnt.h
proj/: AASqlClient.h  AAString.h  ArmyAnt.cbp  ArmyAntLib.sln  ArmyAntLib.userprefs  ArmyAntLib.vcxproj  ArmyAntLib.vcxproj.filters  ArmyAntLib_64.cbp  ArmyAntLib_JNI.vcxproj  ArmyAntLib_JNI.vcxproj.filters  ArmyAntLib_LinuxVC.vcxproj  ArmyAntLib_LinuxVC.vcxproj.filters  ArmyAntLib_Test.vcxproj  ArmyAntLib_Test.vcxproj.filters  CMakeLists.txt  base.hpp  build_end.bat  build_end.sh  build_start.bat  clean.sh  make.sh  make_all.sh
proj/ArmyAnt.xcodeproj/: project.pbxproj
proj/ArmyAnt.xcodeproj/project.xcworkspace/xcuserdata/cast.xcuserdatad/: UserInterfaceState.xcuserstate
proj/ArmyAnt.xcodeproj/project.xcworkspace/xcuserdata/jason.xcuserdatad/: UserInterfaceState.xcuserstate
proj/ArmyAnt.xcodeproj/project.xcworkspace/xcuserdata/wenmin.xcuserdatad/: UserInterfaceState.xcuserstate
proj/ArmyAnt.xcodeproj/xcshareddata/xcschemes/: ArmyAntLib.xcscheme
proj/ArmyAntLib.xcworkspace/: contents.xcworkspacedata
proj/ArmyAntLib.xcworkspace/xcuserdata/cast.xcuserdatad/: UserInterfaceState.xcuserstate
proj/ArmyAntLib.xcworkspace/xcuserdata/jason.xcuserdatad/: UserInterfaceState.xcuserstate
proj/ArmyAntLib.xcworkspace/xcuserdata/wenmin.xcuserdatad/: UserInterfaceState.xcuserstate
proj/ArmyAntLib_Test.xcodeproj/: project.pbxproj
proj/ArmyAntLib_Test/ArmyAntLib_Test.xcodeproj/: project.pbxproj
proj/DerivedData/ArmyAnt/: info.plist
proj/DerivedData/ArmyAnt/TextIndex/: text-filter.idx
proj/DerivedData/ModuleCache/: Session.modulevalidation
src/: AAAes.cpp  AABinary.cpp  AAIStream.cpp  AAIStream_File.cpp  AAIStream_Memory.cpp  AAIStream_Private.hxx  AAJNITools.cpp  AAJson.cpp  AASocket.cpp  ArmyAntLib.cpp  C_AANeuron.cpp  C_AAStream.cpp  base.hpp  build_end.bat  build_end.sh  build_start.bat  build_start.sh
src/JNI/: AAJNITools.cpp
src/algorithm/: AASqlStructs.cpp  C_AANeuron.cpp
src/base/: ArmyAntLib.cpp  base.hpp
src/data/: AAAes.cpp  AABinary.cpp  AAJson.cpp
src/io/: AAIStream.cpp  AAIStream_File.cpp  AAIStream_Memory.cpp  AAIStream_Private.hxx  AASocket.cpp  AASqlClient.cpp  C_AAStream.cpp
src/not_cpp/: ArmyAntNatvisFile.natvis  build_end.bat  build_end.sh  build_start.bat  build_start.sh
src/tool/: AALog.cpp  AAString.cpp
test/: CMakeLists.txt  main.cpp  main.h  testJson.json
tools/: install_linux_arm_g++_toolchains_deb.sh  make.sh  make_all.sh
(+48 files in other folders)
